Final comment check and update before submission

--- a/index.html
+++ b/index.html
@@ -188,6 +188,7 @@
                     </div>
 
                     <!-- Brighton Activities Interest cards -->
+                    <!-- British Airways i360 -->
 
                     <div id="brighton-activities-int">
                         <div>
@@ -211,6 +212,9 @@
                                     </div>
                                 </div>
                             </div>
+
+                            <!-- Brighton Palace Pier -->
+
                             <div class="col-12 col-sm-4 int-cards">
                                 <div class="card mx-auto h-100">
                                     <img src="assets/images/card-images/Brighton-activity/Brighton-card-pier.jpg"
@@ -227,6 +231,9 @@
                                     </div>
                                 </div>
                             </div>
+
+                            <!-- Brighton Sea-Life Centre -->
+
                             <div class="col-12 col-sm-4 int-cards">
                                 <div class="card mx-auto h-100">
                                     <img src="assets/images/card-images/Brighton-activity/Brighton-card-sealife.jpg"
@@ -248,6 +255,7 @@
                     </div>
 
                     <!-- Brighton Restaurants Interest cards -->
+                    <!-- Brighton's Saltroom Restaurant -->
 
                     <div id="brighton-restaurants-int">
                         <div>
@@ -271,6 +279,9 @@
                                     </div>
                                 </div>
                             </div>
+
+                            <!-- Brighton's Baqueano Restaurant -->
+
                             <div class="col-12 col-sm-4 int-cards">
                                 <div class="card mx-auto h-100">
                                     <img src="assets/images/card-images/Brighton-restaurants/Brighton-card-baqueano.jpg"
@@ -288,6 +299,9 @@
                                     </div>
                                 </div>
                             </div>
+
+                            <!-- Brighton's Etch Restaurant -->
+
                             <div class="col-12 col-sm-4 int-cards">
                                 <div class="card mx-auto h-100">
                                     <img src="assets/images/card-images/Brighton-restaurants/Brighton-card-etch.jpg"
@@ -309,6 +323,7 @@
                     </div>
 
                     <!-- Brighton Hotels Interest cards -->
+                    <!-- Brighton's Metropole Hilton Hotel -->
 
                     <div id="brighton-hotels-int">
                         <div>
@@ -331,6 +346,9 @@
                                     </div>
                                 </div>
                             </div>
+
+                            <!-- Brighton's Malmaison Hotel -->
+
                             <div class="col-12 col-sm-4 int-cards">
                                 <div class="card mx-auto h-100">
                                     <img src="assets/images/card-images/Brighton-hotels/Brighton-card-malmaison.jpg"
@@ -347,6 +365,9 @@
                                     </div>
                                 </div>
                             </div>
+
+                            <!-- Brighton's Hotel Duvin -->
+
                             <div class="col-12 col-sm-4 int-cards">
                                 <div class="card mx-auto h-100">
                                     <img src="assets/images/card-images/Brighton-hotels/Brighton-card-duvin.jpg"
@@ -430,6 +451,7 @@
                     </div>
 
                     <!-- Newquay Activities Interest cards -->
+                    <!-- Newquay Zoo -->
 
                     <div id="newquay-activities-int">
                         <div>
@@ -452,6 +474,9 @@
                                     </div>
                                 </div>
                             </div>
+
+                            <!-- Newquay Escape Surf School -->
+
                             <div class="col-12 col-sm-4 int-cards">
                                 <div class="card mx-auto h-100">
                                     <img src="assets/images/card-images/Newquay-activity/Newquay-card-escape.png"
@@ -468,6 +493,9 @@
                                     </div>
                                 </div>
                             </div>
+
+                            <!-- Newquay Flambards Theme Park -->
+
                             <div class="col-12 col-sm-4 int-cards">
                                 <div class="card mx-auto h-100">
                                     <img src="assets/images/card-images/Newquay-activity/Newquay-card-flambards.jpg"
@@ -488,6 +516,7 @@
                     </div>
 
                     <!-- Newquay Restaurants Interest cards -->
+                    <!-- Newquay Stable Pizza Restaurant -->
 
                     <div id="newquay-restaurants-int">
                         <div>
@@ -510,6 +539,9 @@
                                     </div>
                                 </div>
                             </div>
+
+                            <!-- Newquay Kahuna Restaurant -->
+
                             <div class="col-12 col-sm-4 int-cards">
                                 <div class="card mx-auto h-100">
                                     <img src="assets/images/card-images/Newquay-restaurants/Newquay-card-kahuna.jpg"
@@ -527,6 +559,9 @@
                                     </div>
                                 </div>
                             </div>
+
+                            <!-- Newquay Fish House Restaurant -->
+
                             <div class="col-12 col-sm-4 int-cards">
                                 <div class="card mx-auto h-100">
                                     <img src="assets/images/card-images/Newquay-restaurants/Newquay-card-fishhouse.jpg"
@@ -548,6 +583,7 @@
                     </div>
 
                     <!-- Newquay Hotels Interest cards -->
+                    <!-- Newquay Headland Hotel -->
 
                     <div id="newquay-hotels-int">
                         <div>
@@ -571,6 +607,9 @@
                                     </div>
                                 </div>
                             </div>
+
+                            <!-- Newquay Oceanside Hotel -->
+
                             <div class="col-12 col-sm-4 int-cards">
                                 <div class="card mx-auto h-100">
                                     <img src="assets/images/card-images/Newquay-hotels/Newquay-card-oceanside.jpg"
@@ -589,6 +628,9 @@
                                     </div>
                                 </div>
                             </div>
+
+                            <!-- Newquay Atlantic Hotel -->
+
                             <div class="col-12 col-sm-4 int-cards">
                                 <div class="card mx-auto h-100">
                                     <img src="assets/images/card-images/Newquay-hotels/Newquay-card-atlantic.jpg"
@@ -677,6 +719,7 @@
                     </div>
 
                     <!-- Cardigan Activities Interest cards -->
+                    <!-- Cardigan New Quay Boat Trip -->
 
                     <div id="cardigan-activities-int">
                         <div>
@@ -701,6 +744,9 @@
                                     </div>
                                 </div>
                             </div>
+
+                            <!-- Cardigan Aberystwyth Cliff Railway -->
+
                             <div class="col-12 col-sm-4 int-cards">
                                 <div class="card mx-auto h-100">
                                     <img src="assets/images/card-images/Cardigan-activity/Cardigan-card-railway.jpg"
@@ -720,6 +766,9 @@
                                     </div>
                                 </div>
                             </div>
+
+                            <!-- Cardigan In the Welsh Wind Distillery -->
+
                             <div class="col-12 col-sm-4 int-cards">
                                 <div class="card mx-auto h-100">
                                     <img src="assets/images/card-images/Cardigan-activity/Cardigan-card-distillery.jpg"
@@ -740,6 +789,7 @@
                     </div>
 
                     <!-- Cardigan Restaurants Interest cards -->
+                    <!-- Cardigan Pizza Tipi Restaurant -->
 
                     <div id="cardigan-restaurants-int">
                         <div>
@@ -762,6 +812,9 @@
                                     </div>
                                 </div>
                             </div>
+
+                            <!-- Cardigan The Grosvenor Restaurant -->
+
                             <div class="col-12 col-sm-4 int-cards">
                                 <div class="card mx-auto h-100">
                                     <img src="assets/images/card-images/Cardigan-restaurants/Cardigan-card-grosvenor.jpg"
@@ -782,6 +835,9 @@
                                     </div>
                                 </div>
                             </div>
+
+                            <!-- Cardigan The Copper Pot Restaurant -->
+
                             <div class="col-12 col-sm-4 int-cards">
                                 <div class="card mx-auto h-100">
                                     <img src="assets/images/card-images/Cardigan-restaurants/Cardigan-card-copperpot.jpg"
@@ -803,6 +859,7 @@
                     </div>
 
                     <!-- Cardigan Hotels Interest cards -->
+                    <!-- Cardigan The Cliff Hotel -->
 
                     <div id="cardigan-hotels-int">
                         <div>
@@ -827,6 +884,9 @@
                                     </div>
                                 </div>
                             </div>
+
+                            <!-- Cardigan Top of the Woods Camping-->
+
                             <div class="col-12 col-sm-4 int-cards">
                                 <div class="card mx-auto h-100">
                                     <img src="assets/images/card-images/Cardigan-hotels/Cardigan-card-top.jpg"
@@ -845,6 +905,9 @@
                                     </div>
                                 </div>
                             </div>
+
+                            <!-- Cardigan Pentre Arms Hotel-->
+
                             <div class="col-12 col-sm-4 int-cards">
                                 <div class="card mx-auto h-100">
                                     <img src="assets/images/card-images/Cardigan-hotels/Cardigan-card-pentre.jpeg"
@@ -945,6 +1008,7 @@
                     </div>
 
                     <!-- Skye Activities Interest cards -->
+                    <!-- Skye Sea Kayak -->
 
                     <div id="skye-activities-int">
                         <div>
@@ -969,6 +1033,9 @@
                                     </div>
                                 </div>
                             </div>
+
+                            <!-- Skye Axe Throwing -->
+
                             <div class="col-12 col-sm-4 int-cards">
                                 <div class="card mx-auto h-100">
                                     <img src="assets/images/card-images/Skye-activity/Skye-card-axe.jpg"
@@ -988,6 +1055,9 @@
                                     </div>
                                 </div>
                             </div>
+
+                            <!-- Skye Hikers -->
+
                             <div class="col-12 col-sm-4 int-cards">
                                 <div class="card mx-auto h-100">
                                     <img src="assets/images/card-images/Skye-activity/Skye-card-hikers.jpg"
@@ -1009,6 +1079,7 @@
                     </div>
 
                     <!-- Skye Restaurants Interest cards -->
+                    <!-- Skye Scorrybreac Restaurant -->
 
                     <div id="skye-restaurants-int">
                         <div>
@@ -1035,6 +1106,9 @@
                                     </div>
                                 </div>
                             </div>
+
+                            <!-- Skye Loch Bay Restaurant -->
+
                             <div class="col-12 col-sm-4 int-cards">
                                 <div class="card mx-auto h-100">
                                     <img src="assets/images/card-images/Skye-restaurants/Skye-card-lochbay.jpeg"
@@ -1055,6 +1129,9 @@
                                     </div>
                                 </div>
                             </div>
+
+                            <!-- Skye Red Skye Restaurant -->
+
                             <div class="col-12 col-sm-4 int-cards">
                                 <div class="card mx-auto h-100">
                                     <img src="assets/images/card-images/Skye-restaurants/Skye-card-redskye.jpg"
@@ -1078,6 +1155,7 @@
                     </div>
 
                     <!-- Skye Hotels Interest cards -->
+                    <!-- Skye Marmalade Hotel -->
 
                     <div id="skye-hotels-int">
                         <div>
@@ -1103,6 +1181,9 @@
                                     </div>
                                 </div>
                             </div>
+
+                            <!-- Skye Eilean Iarmain Hotel -->
+
                             <div class="col-12 col-sm-4 int-cards">
                                 <div class="card mx-auto h-100">
                                     <img src="assets/images/card-images/Skye-hotels/Skye-card-eilean.jpg"
@@ -1120,6 +1201,9 @@
                                     </div>
                                 </div>
                             </div>
+
+                            <!-- Skye Greshornish House Hotel -->
+
                             <div class="col-12 col-sm-4 int-cards">
                                 <div class="card mx-auto h-100">
                                     <img src="assets/images/card-images/Skye-hotels/Skye-card-greshornish.jpg"
@@ -1230,10 +1314,16 @@
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA7FvKpzgVhkZRmkGj7JLKjvR91_JjVAeQ&callback=initMap"
         async defer class="sr-only"></script>
 
+    <!-- JavaScript scripts -->
+
     <script src="assets/js/script.js"></script>
     <script src="assets/js/maps.js"></script>
 
+    <!-- Map markers -->
+
     <link rel="stylesheet" href="assets/css/mapmarkerstyle.css">
+
+    <!-- Javascript email script -->
 
     <script src="assets/js/email.js"></script>
 
